# mere

./: .gitignore  CLAUDE.md  README.md  data_sync_test_results_conflict_resolution.json  docker-compose.yml  guide.md  ios_test.md  offline_mode_test_results.json  pyproject.toml  requirements.txt  semantic_search_test_results.json  test_advanced_search.py  test_api_endpoints.py  test_embedding_only.py  test_enhanced_nlu.py  test_nlu.py  test_pipeline_e2e.py  test_search_api.py  test_stt.py  test_swiftui_websocket.py  test_tts.py  test_tts_api.py  test_websocket_integration.py
.github/workflows/: test.yml
backend/: Dockerfile  advanced_search.py  business_services.py  calendar_service.py  calendar_service_production.py  conversation_state.py  database.py  embedding_service.py  enhanced_nlu_service.py  main.py  main_langgraph.py  nlu_service.py  oauth_endpoints.py  search_api.py  search_models.py  stt_service.py  test_simple_langgraph.py  tts_service.py
docs/: production_deployment.md
docs/plan/: design.md  requirements.md  tasks.md
ios/: AIService.swift  AudioManager.swift  ContentView.swift  EnhancedContentView.swift  Info.plist  MEREApp_Setup.md
ios/MEREApp/: AIService.swift  AudioManager.swift  ContentView.swift  ConversationModels.swift  CoreDataStack.swift  DataSyncManager.swift  EnhancedContentView.swift  EventEntity.swift  LocalDataManager.swift  (+8 more)
ios/MEREApp.xcodeproj/: project.pbxproj
scripts/: create_search_tables.sql  debug_connection.py  init_db.sql  setup_dev_env.sh  setup_google_calendar.md  test_api_key.py  test_simple.py
tests/: conftest.py
(+26 files in other folders)
